objects/Survey__c/fields/Relational_6_Authority__c.field-meta.xml
<CustomField>
    <fullName>Relational_6_Authority__c</fullName>
    <label>Relational_6_Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I purchased Tanium for my organization or company (i.e., I authorized the purchase)</fullName>
            </value>
            <value>
                <fullName>I directly influenced the decision to purchase Tanium</fullName>
            </value>
            <value>
                <fullName>I did not authorize or influence the decision to purchase Tanium</fullName>
            </value>
            <value>
                <fullName>私は私の組織または会社のためにTaniumを購入決定をする権限があります。</fullName>
            </value>
            <value>
                <fullName>私は、Tanium を購入する決定に直接影響を与える立場にあります。</fullName>
            </value>
            <value>
                <fullName>私は、Tanium を購入する決定影響を与える立場にありません。</fullName>
            </value>
            <value>
                <fullName>Taniumの購入を決定をする権限がある</fullName>
            </value>
            <value>
                <fullName>Taniumの購入の決定に直接影響を与える立場にある</fullName>
            </value>
            <value>
                <fullName>Taniumの購入を決定する権限や購入への影響力はない (</fullName>
            </value>
            <value>
                <fullName>Taniumの購入を決定する権限や購入への影響力はない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>