objects/Survey__c/fields/Relational_7_Comment__c.field-meta.xml
<CustomField>
    <fullName>Relational_7_Comment__c</fullName>
    <label>Relational_7_Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>