objects/Survey__c/fields/Relational_8_Disappointed_Comments__c.field-meta.xml
<CustomField>
    <fullName>Relational_8_Disappointed_Comments__c</fullName>
    <label>Relational_8_Disappointed Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>