objects/Survey__c/fields/Relational_8_Disappointed_Selection__c.field-meta.xml
<CustomField>
    <fullName>Relational_8_Disappointed_Selection__c</fullName>
    <label>Relational_8_Disappointed Selection</label>
    <length>25</length>
    <type>Text</type>
</CustomField>