objects/Survey__c/fields/Response_Analyze_URL__c.field-meta.xml
<CustomField>
    <fullName>Response_Analyze_URL__c</fullName>
    <inlineHelpText>This is the Survey Monkey link to the survey submitted by the customer</inlineHelpText>
    <label>Response Analyze URL</label>
    <type>Url</type>
</CustomField>