objects/Survey__c/fields/Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_ID__c</fullName>
    <inlineHelpText>This is the ID of the Survey Monkey survey</inlineHelpText>
    <label>Survey ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>