objects/Survey__c/fields/SurveyCreateDate__c.field-meta.xml
<CustomField>
    <fullName>SurveyCreateDate__c</fullName>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>