objects/Survey__c/fields/Trusted_Provider__c.field-meta.xml
<CustomField>
    <fullName>Trusted_Provider__c</fullName>
    <description>Indicates customer trust in the provider as a reliable Tanium services partner. JIRA: SS‑13029</description>
    <label>Trusted Provider</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>