objects/Survey__c/recordTypes/Deployment_Verification.recordType-meta.xml
<RecordType>
    <fullName>Deployment_Verification</fullName>
    <active>true</active>
    <description>Captures responses from Survey Monkey surveys sent to the Deployment Verification Partner on Opportunities</description>
    <label>Deployment Verification</label>
</RecordType>