objects/Survey__c/recordTypes/ES_CSAT.recordType-meta.xml
<RecordType>
    <fullName>ES_CSAT</fullName>
    <active>true</active>
    <label>Enterprise Services CSAT</label>
</RecordType>