objects/Survey__c/recordTypes/ES_Feedback.recordType-meta.xml
<RecordType>
    <fullName>ES_Feedback</fullName>
    <active>true</active>
    <label>Enterprise Services Feedback</label>
</RecordType>