objects/Survey__c/recordTypes/FTAM.recordType-meta.xml
<RecordType>
    <fullName>FTAM</fullName>
    <active>true</active>
    <label>FTAM</label>
</RecordType>