objects/Survey__c/recordTypes/Implement.recordType-meta.xml
<RecordType>
    <fullName>Implement</fullName>
    <active>true</active>
    <label>Implement</label>
</RecordType>