objects/Survey__c/recordTypes/Onboard.recordType-meta.xml
<RecordType>
    <fullName>Onboard</fullName>
    <active>true</active>
    <label>Onboard</label>
</RecordType>