objects/Survey__c/recordTypes/Post_Deployment_CSAT.recordType-meta.xml
<RecordType>
    <fullName>Post_Deployment_CSAT</fullName>
    <active>true</active>
    <label>Post Deployment CSAT</label>
</RecordType>