objects/Survey__c/recordTypes/Relational_NPS.recordType-meta.xml
<RecordType>
    <fullName>Relational_NPS</fullName>
    <active>true</active>
    <label>Relational NPS</label>
</RecordType>