objects/Survey__c/recordTypes/SC_CSAT.recordType-meta.xml
<RecordType>
    <fullName>SC_CSAT</fullName>
    <active>true</active>
    <label>Support Center CSAT</label>
</RecordType>