objects/Survey__c/listViews/All_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Surveys</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Surveys</label>
</ListView>