objects/Survey__c/listViews/Copy_of_CSAT_Surveys_Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Copy_of_CSAT_Surveys_Created_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Case_1_NPS__c</columns>
    <columns>Case_2_Satisfaction__c</columns>
    <columns>Case_3_Speed_of_Resolution__c</columns>
    <columns>Case_4_Technical_Knowledge__c</columns>
    <columns>Case_5_Issue_Resolved__c</columns>
    <columns>Case_6_Comment__c</columns>
    <columns>SurveyCreateDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.SC_CSAT</value>
    </filters>
    <label>CSAT Surveys Created This Week</label>
</ListView>