objects/Survey__c/listViews/CSAT_Surveys_Created_Today.listView-meta.xml
<ListView>
    <fullName>CSAT_Surveys_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Case_1_NPS__c</columns>
    <columns>Case_2_Satisfaction__c</columns>
    <columns>Case_3_Speed_of_Resolution__c</columns>
    <columns>Case_4_Technical_Knowledge__c</columns>
    <columns>Case_5_Issue_Resolved__c</columns>
    <columns>Case_6_Comment__c</columns>
    <columns>SurveyCreateDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>CSAT Surveys Created Today</label>
</ListView>