objects/Survey__c/listViews/Deployment_Verification_Created_Today.listView-meta.xml
<ListView>
    <fullName>Deployment_Verification_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Deployment_Verification_Response__c</columns>
    <columns>Deployment_Verification_Opportunity__c</columns>
    <columns>Deployment_Verification_Comments__c</columns>
    <columns>SurveyCreateDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Deployment_Verification</value>
    </filters>
    <label>Deployment Verification Created Today</label>
</ListView>