objects/Survey__c/listViews/Enterprise_Services_CSAT_Surveys.listView-meta.xml
<ListView>
    <fullName>Enterprise_Services_CSAT_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>ESCSAT_2_Satisfaction__c</columns>
    <columns>ESCSAT_2_CSAT__c</columns>
    <columns>ESCSAT_1_NPS__c</columns>
    <columns>ESCSAT_2_Reason__c</columns>
    <columns>ESCSAT_3_Experience__c</columns>
    <columns>ESCSAT_4_Respect__c</columns>
    <columns>ESCSAT_5_Goals__c</columns>
    <columns>ESCSAT_6_Professional__c</columns>
    <columns>ESCSAT_7_Trusted__c</columns>
    <columns>ESCSAT_8_Cost__c</columns>
    <columns>ESCSAT_9_Comment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.ES_CSAT</value>
    </filters>
    <label>Enterprise Services CSAT Surveys</label>
</ListView>