objects/Survey__c/listViews/My_Surveys.listView-meta.xml
<ListView>
    <fullName>My_Surveys</fullName>
    <columns>Account__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Case_1_NPS__c</columns>
    <columns>Case_2_Satisfaction__c</columns>
    <columns>Case_3_Speed_of_Resolution__c</columns>
    <columns>Case_4_Technical_Knowledge__c</columns>
    <columns>Case_5_Issue_Resolved__c</columns>
    <columns>Case_6_Comment__c</columns>
    <columns>SurveyCreateDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Support Center</value>
    </filters>
    <filters>
        <field>OwnerCurrentUser__c</field>
        <operation>equals</operation>
        <value>true</value>
    </filters>
    <label>My Support Center CSAT Surveys</label>
</ListView>